<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#00000000">
    <TextView
        android:tag="wallpaper"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qs_homescreen_chooser_item_height"
		style="@style/QsSsHomescreenChooser"
        android:text="@string/zzzz_ss_long_click_dlg_wallpaper"/>  
    <TextView
        android:tag="label"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textSize="14dp"
        android:textColor="#FFFFFFFF"
        android:background="#707070"
        android:paddingLeft="16dp"
        android:text="@string/zzzz_ss_long_click_dlg_label"/>
   <TextView 
        android:tag="app"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qs_homescreen_chooser_item_height"
		style="@style/QsSsHomescreenChooser"
        android:text="@string/zzzz_ss_long_click_dlg_app"/>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_dark"/>
    <TextView 
        android:tag="folder"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qs_homescreen_chooser_item_height"
		style="@style/QsSsHomescreenChooser"
        android:text="@string/zzzz_ss_long_click_dlg_folder"/>
    <View 
        android:layout_width="fill_parent"
        android:layout_height="1dp"
        android:background="@android:drawable/divider_horizontal_dark"/>
    <TextView 
        android:tag="page"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/qs_homescreen_chooser_item_height"
		style="@style/QsSsHomescreenChooser"
        android:text="@string/zzzz_ss_long_click_dlg_page"/>

</LinearLayout>